# mtga_assets_parser

./: Cargo.toml  README.md
src/: client.rs  main.rs
